# GuardRAG

./: .env  .env.example  Dockerfile  README.md  SETUP_GUIDE.md  coverage.xml  demo_final_security.py  diagnostics.py  docker-compose.yml  guardrails_learning.jsonl  main.py  manage.py  pyproject.toml  pytest.ini  run_real_tests.py  run_tests.py  setup.py  start_frontend.py  tasks.py  test_complete_system.py  test_hybrid_guardrails.py  test_simple_workflow.py
config/: actions.py  config.yml  flows.co  rails.co
frontend/: README.md  api.js  app.js  index.html
src/: __init__.py  colpali_integration.py  colpali_manager.py  enhanced_rag_agent.py  input_guardrail.py  modern_guardrails.py  modern_input_guardrail.py  output_guardrail.py  qdrant_integration.py  rag_agent.py
test_logs/: test_results_20250711_191916.json
tests/: .coverage  conftest.py  coverage.xml  test_api.py  test_comprehensive.py  test_dangerous_query.py  test_guardrails.py  test_modern_guardrails.py  test_output_score_validation.py  test_product_knowledge.py  test_real_integration.py  test_setup.py
